# webman

./: .gitignore  Cargo.nix  Cargo.toml  README.md  devshell.toml  flake.nix  rustfmt.toml  webman.example.toml
.github/workflows/: build.yml
webman-cli/: Cargo.toml  provide.sh
webman-cli/src/: browser.rs  config.rs  main.rs  tag.rs
webman-cljs/: .dir-locals.el  .gitignore  .zprintrc  README.md  package-lock.json  package.json  shadow-cljs.edn
webman-cljs/.clj-kondo/: config.edn
webman-cljs/resources/public/: index.html
webman-cljs/resources/public/css/: site.css
webman-cljs/resources/public/js/compiled/: app.js  manifest.edn
webman-cljs/src/webman_cljs/: config.cljs  core.cljs  db.cljs  events.cljs  subs.cljs  views.cljs
webman-cljs/src/webman_cljs/ornament/: components.cljc  hooks.clj  styles.clj  views.cljc
webman-core/: Cargo.toml  sqlx-data.json
webman-core/migrations/: 20220803065506_create_tables.sql  20220804135113_add_fun_upsert_visits.sql  20220805095438_add_url_visit_view.sql  20231021112700_add_vivaldi.sql  20241214214034_add_floorp.sql
webman-core/src/: config.rs  lib.rs  node.rs  url.rs
webman-core/src/browser/: miner.rs  mod.rs
webman-core/src/browser/miner/: chromium.rs  firefox.rs  floorp.rs  safari.rs  vivaldi.rs
webman-core/src/db/: joined.rs  mod.rs  prelude.rs  provider.rs  tests.rs  url.rs  visit.rs
webman-core/src/url/: tag.rs
webman-core/src/web/: mod.rs  resp.rs
webman-core/src/web/client/: apikey_client.rs  client_trait.rs  mod.rs
webman-server/: Cargo.toml
webman-server/src/: config.rs  main.rs  server.rs
