[package]
name = "webman-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.24"
figment = { version = "0.10", features = ["env", "toml", "json", "yaml"] }
serde_json = "1.0"
anyhow = "1.0.58"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.21"
clap = { version = "3.2.3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
simplelog = "0.12.0"
once_cell = "1.13.0"

[dependencies.webman-core]
path = "../webman-core"
features = ["browser"]