[package]
name = "webman-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
figment = { version = "0.10", features = ["env", "toml", "json", "yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.24"
rmp-serde = "1.1.0"
dirs = {version = "4.0.0", optional = true}
chrono = { version = "0.4.20", features = ["serde"] }
anyhow = "1.0.58"
tokio = { version = "1", features = ["full"] }
strum = { version = "0.24", features = ["derive"] }
log = "0.4.17"
reqwest = { version = "0.11.11", default-features=false, features = ["json", "rustls-tls"] }
async-trait = "0.1.57"
futures = "0.3.21"

[dev-dependencies.sqlx-database-tester]
version = "0.4.2"
features = ["runtime-tokio"]

[dev-dependencies]
rand = "0.8.5"
futures ="0.3.21"
serial_test = "1"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]
optional = true

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["msgpack", "json", "tls", "secrets"]  
optional = true

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]
optional = true

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [ "runtime-tokio-rustls" , "postgres", "macros", "chrono", "offline"] 
optional = true

[features]
browser = ["dep:dirs", "dep:rusqlite"]
server = ["dep:sqlx", "dep:rocket", "dep:rocket_db_pools"]