[package]
name = "webman-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.11", default-features=false, features = ["json", "rustls-tls"] }
figment = { version = "0.10", features = ["env", "toml", "json", "yaml"] }
once_cell = "1.13.0"
parse_duration = "2.1.1"
anyhow = "1.0.58"
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
chrono = { version = "0.4.20", features = ["serde"] }
cookie = "0.16.0"
dashmap = "5.4.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["msgpack", "json", "tls", "secrets"]    

[dependencies.rocket_db_pools]
version = "0.1.0-rc.3"
features = ["sqlx_postgres"]

[dependencies.webman-core]
path = "../webman-core"
features = ["server"]

